glitch fixed on iphone for numbers to show up

--- a/scss/barrel-district.scss
+++ b/scss/barrel-district.scss
@@ -3,6 +3,7 @@
 @import "global.scss";
 
 #barrel-district{
+    a[href^=tel] { color: inherit; text-decoration: none; }
     padding-bottom: 100px;
     h2{
         margin:0;
